# aerial-autonomy-stack

./: .gitignore  README.md  TELEOP_FIXES.md
aircraft/: aircraft.yml.erb
aircraft/aircraft_ws/src/autopilot_interface/: CMakeLists.txt
aircraft/aircraft_ws/src/autopilot_interface/src/: ardupilot_interface.cpp  px4_interface.cpp  px4_interface.hpp
aircraft/aircraft_ws/src/offboard_control/: CMakeLists.txt
aircraft/aircraft_ws/src/offboard_control/src/: ardupilot_guided.cpp  px4_offboard.cpp  px4_offboard.hpp
aircraft/aircraft_ws/src/yolo_inference/yolo_inference/: yolo_inference_node.py
scripts/: sim_run.sh
scripts/docker/: Dockerfile.aircraft  Dockerfile.simulation
simulation/: simulation.yml.erb
supplementary/lichtblick/: aerial_autonomy.layout.json
